--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,7 @@ edition = "2021"
 actix-web = "4.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-uuid = "1.0"
+rand = "0.9.0"
+url = "2.5.4"
+regex = "1.11.1"
+lazy_static = "1.5.0"
